assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Exo:100,200,300,400,500,600,700|Roboto:100.200,300,400,500,600,700|Reenie+Beanie:100,200,300,400|Shadows+Into+Light:10,200,300,400');

/*---------Navbar---------*/

.navbar {
    margin: 0;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1;
    background-color: #000019;
    border: 0;
    font-family: "Exo";
    padding: 0;
    
}

.navbar-default .navbar-collapse {
    border-color: transparent;
    
}

.navbar-default .navbar-toggle {
    border: 0;
    position: relative;
}

.navbar-default .navbar-toggle:hover {
    background-color: transparent;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: white;
}

.navbar .navbar-brand {
    font-weight: bold;
    color:    #D5AD6D; 
    background: -webkit-linear-gradient(transparent, transparent),-webkit-linear-gradient(top, rgba(213,173,109,1) 0%, rgba(213,173,109,1) 26%, rgba(226,186,120,1) 35%, rgba(163,126,67,1) 45%, rgba(145,112,59,1) 61%, rgba(213,173,109,1) 100%);
    background: -o-linear-gradient(transparent, transparent);-webkit-background-clip: text; -webkit-text-fill-color: transparent;
}


.navbar .navbar-brand:hover {
    color: white;
}

.navbar-default .navbar-nav a {
    font-weight: bold;
    color: white;
}

.navbar-default .navbar-nav>.active>a,
.navbar-default .navbar-nav>.active>a:focus,
.navbar-default .navbar-nav>.active>a:hover {
    color: white;
    background: transparent;
}

.navbar-default .navbar-nav>li>a:focus,
.navbar-default .navbar-nav>li>a:hover {
    color: white;
}

.navbar-brand {
    font-family: "EXO";
    font-size: 40px;
}





/*------------Social Links----------------*/

.social-links{
    padding: 5px;
   
  
}


.social-links li a i {

font-size:  30px;
width: 35px;
text-align: center;
text-decoration: none;
margin: 3px 3px;

     transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.fa-youtube {
background-color: white;    


color: #bb0000;

}

.fa-spotify{
    
color:#1ED760;
}


.fa-soundcloud{
    
color:#ff5500;
}

.fa-mixcloud{
    
color:#52aad8;
}

.fa-facebook{
    
 color: white;
 background-color:#3b5998;
 border:1px solid #3b5998;
 border-radius: 50%;

}

.fa-instagram {
  color:  #ffffff;
  background: #d6249f;
  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
  box-shadow: 0px 3px 10px rgba(0,0,0,.25);

    
}
   
/*------------Containers----------------*/ 
    
.container-footer{
    
    margin-bottom: 10px;
    position: absolute;
    height: 50px;
    width: 100%;
    z-index: 1;
    background-color: #000019;
    border: 0;
    font-family: "Exo"
   
}

.container-main{
    
    height: 100vh;
    background: url('../images/vintage.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;

    display: flex;
    justify-content: center;

    position: relative;
    overflow: hidden;
  margin-bottom: 0 ;
}


/*------------Main Page----------------*/ 

.cemadrian{
    font-family: 'Reenie Beanie', cursive;
    color: #ffffff;
    font-size: 50px;
    margin-top: 70px;
}


.container-video{

position:relative;
	padding-bottom:56.25%;
	padding-top:30px;
	height:0;
	overflow:hidden;
}

.container-video iframe, .container-video object, .container-video embed{
    
    position:absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
}
    



/*------------Bio----------------*/ 

.bio{
  font-family: "Roboto", sans-serif;
    font-weight: 200;
    font-size: 18px;
    padding-bottom: 60px;
    padding-top: 40px;
    color: white;
    
}

.bio-summary{
  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 18px;
   color: white;  
   text-align: left; 
 padding-bottom: 20px ;
}

.row-content{
    padding: 20px;
}



/*------------UpcomingConcerts--------------*/ 

.concert{
    font-family: "Exo";
    font-size: 20px;
    font-weight: 300;
    color: white;
    margin-top: 10px;
}

th, td {
    padding: 10px;
}


.concert .glyphicon {
 
    margin-right: 5px;
    font-size: 20px;
    line-height: 65px;
    color: white;
    font-weight: 300;
}

.concertdates{
    margin-top: 65px;
    text-align: center;
    text-transform: uppercase ;
    font-weight: 300;
    font-size: 50px;

}

.hover{
   color: #ffffff;
  transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}




/*--------------ALBUMS----------------*/


.audioplayer{
    size: auto;
    display:block;
    margin: auto;
    padding: 50px;
    min-height: 5px;
    float: left;
    position: relative;
  
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
  
    
}

  
/* Smartphones (portrait and landscape) ----------- */

@media only screen 
and (min-device-width : 320px) 
and (max-device-width : 480px) {
/* Styles */
}

/* Smartphones (landscape) ----------- */

@media only screen 
and (min-width : 321px) {
/* Styles */
}

/* Smartphones (portrait) ----------- */

@media only screen 
and (max-width : 320px) {
/* Styles */
}

/* iPads (portrait and landscape) ----------- */
@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) {
    
    
/* Styles */

}

/* iPads (landscape) ----------- */

@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) 
and (orientation : landscape) {
    
    
/* Styles */

}

/* iPads (portrait) ----------- */
@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px) 
and (orientation : portrait) {
    
    
/* Styles */

}

/*----- Desktops and laptops ----------- */

@media only screen 
and (min-width : 1224px) {
    
/* Styles */
}


/*----------- Large screens ----------- */

@media only screen 
and (min-width : 1824px) {
    
/* Styles */


}

/*---------------- iPhone 4 ----------- */
@media
only screen and (-webkit-min-device-pixel-ratio : 1.5),
only screen and (min-device-pixel-ratio : 1.5) {
    
/* Styles */


}


/* iPhone 6 landscape */

@media only screen and (min-device-width: 375px)
  and (max-device-width: 667px)
  and (orientation: landscape)
  and (-webkit-min-device-pixel-ratio: 2)
{ }

/* iPhone 6 portrait */

@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 667px)
  and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2)
{ }

/* iPhone 6 Plus landscape */

@media only screen
  and (min-device-width: 414px)
  and (max-device-width: 736px)
  and (orientation: landscape)
  and (-webkit-min-device-pixel-ratio: 3)
{ }

/* iPhone 6 Plus portrait */

@media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 736px) 
  and (orientation: portrait) 
  and (-webkit-min-device-pixel-ratio: 3)
{ }

/* iPhone 6 and 6 Plus */

@media only screen
  and (max-device-width: 640px),
  only screen and (max-device-width: 667px),
  only screen and (max-width: 480px)
{ }

/* Apple Watch */

@media
  (max-device-width: 42mm)
  and (min-device-width: 38mm)
{ }

